fixed navbar to link vertical spacing for most screen sizes

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -62,7 +62,7 @@
             position: fixed;
             top: 0;
             left: 0;
-            height: 70px;
+            height: 5re;
             min-height: 67px;
             width: 100%;
             .navbar {
